--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
 <body>
   <div>
     <input type="text" id="input">
-    <button id="addTodod">タスクを追加</button>
+    <button id="addTodo">タスクを追加</button>
   </div>
   <div>
-    <ul id="todoList">
-
-    </ul>
+    <ul id="todoList"></ul>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="app.js"></script>
